--- a/src/pages/projets/[...page].astro
+++ b/src/pages/projets/[...page].astro
@@ -27,7 +27,7 @@ const currentUrl = Astro.url;
   <PageHead slot="head" title="Projects" />
   <Breadcrumbs
     items={[
-      { label: 'Projets', href: '/projets', icon: 'lucide:folder-open-dot' },
+      { label: 'Projets', href: '/projects', icon: 'lucide:folder-open-dot' },
     ]}
   />
 
