--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -45,7 +45,7 @@ const currentUrl = Astro.url;
       Blog
     </h2>
     <p class="text-muted-foreground text-md max-w-2xl mt-3">
-      Bienvenue sur mon blog ! Ici je partage mes réflexions, idées et expériences sur le développement web, la programmation, et bien plus encore. Il n'y a malheureusement pas d'articles pour le moment, mais je travaille à en ajouter davantage bientôt. Restez à l'écoute !
+      Bienvenue sur mon blog ! Ici je partage mes réflexions, idées et expériences sur le développement web, la programmation, et bien plus encore. Il n'y a malheureusement pas d'articles pour le moment, mais je travaille à en ajouter bientôt. Restez à l'écoute !
     </p>
 
     <div class="flex min-h-[calc(100vh-18rem)] flex-col gap-y-8 my-12">
