--- a/src/pages/projects/[...page].astro
+++ b/src/pages/projects/[...page].astro
@@ -24,7 +24,7 @@ const currentUrl = Astro.url;
 ---
 
 <Layout canonicalUrl={currentUrl}>
-  <PageHead slot="head" title="Projects" />
+  <PageHead slot="head" title="Projets" />
   <Breadcrumbs
     items={[
       { label: 'Projets', href: '/projects', icon: 'lucide:folder-open-dot' },
