add about page and translation

--- a/src/components/Breadcrumbs.astro
+++ b/src/components/Breadcrumbs.astro
@@ -48,8 +48,8 @@ const breadcrumbStructuredData = {
 <Breadcrumb>
   <BreadcrumbList>
     <BreadcrumbItem>
-      <BreadcrumbLink href="/" aria-label="Home" title="Home">
-        <span class="sr-only">Home</span>
+      <BreadcrumbLink href="/" aria-label="Accueil" title="Accueil">
+        <span class="sr-only">Accueil</span>
         <Icon name="lucide:home" class="size-4" />
       </BreadcrumbLink>
     </BreadcrumbItem>
