--- a/src/components/TableOfContents.astro
+++ b/src/components/TableOfContents.astro
@@ -43,14 +43,13 @@ function cleanupHeading(text: string): string {
         id="skills-title"
         class="font-custom flex items-center gap-x-2 text-2xl font-bold text-neutral-900 dark:text-white"
       >
-        Table of Contents <Icon
+        Sommaire <Icon
           name="lucide:chevron-down"
           class="size-5 shrink-0 transition-transform group-open:rotate-180"
         />
       </h2>
-      <p class="text-sm text-neutral-500 dark:text-neutral-400">
-        This is a list of all the sections in this post. Click on any of them to
-        jump to that section.
+      <p class="text-xs text-neutral-500 dark:text-neutral-400">
+        Voici la liste de toutes les sections de cet article. Cliquez sur l'une d'entre elles pour accéder à cette section.
       </p>
     </div>
   </summary>
