--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,8 @@ const currentUrl = Astro.url;
 ---
 
 <Layout canonicalUrl={currentUrl}>
+
+  <!-- PAGE HEAD -->
   <PageHead slot="head" title="Junior Full Stack Developer" />
   <section class="flex flex-col gap-y-12 px-4 py-8 sm:px-8 lg:px-16">
     <div
@@ -28,7 +30,7 @@ const currentUrl = Astro.url;
         <img
           src="/img/YG-1.jpg"
           alt="Photo Yoann Guion"
-          class="h-40 w-40 object-cover sm:h-48 sm:w-48 md:h-56 md:w-56 lg:h-64 lg:w-64"
+          class="rounded-xl w-48 h-64 object-cover mx-auto shadow-lg"
           />
           
         <!-- <Logo
@@ -62,17 +64,18 @@ const currentUrl = Astro.url;
       </div>
     </div>
 
-    <section class="relative" aria-labelledby="skills-title">
+    <!-- SKILLS SECTION -->
+    <section class="relative" aria-labelledby="titre-competences-technologies">
       <h2
-        id="skills-title"
+        id="titre-competences-technologies"
         class="font-custom text-foreground text-2xl font-bold"
-        title="skills"
-        aria-label="skills"
+        title="Compétences et Technologies"
+        aria-label="Compétences et Technologies"
         role="heading"
       >
-        Skills & Technologies
+        Compétences & Technologies
       </h2>
-      <p class="text-muted-foreground text-sm" aria-label="skills description">
+      <p class="text-muted-foreground text-sm" aria-label="Description des compétences et technologies">
         Voici un aperçu de mes compétences et des technologies que je maîtrise :
       </p>
       <div>
@@ -81,17 +84,17 @@ const currentUrl = Astro.url;
     </section>
 
     <!-- PROJECT SECTION -->
-     <section class="flex flex-col gap-y-4" aria-labelledby="latest-projects-title" role="region">
-  <div class="relative" aria-labelledby="latest-projects-title">
+     <section class="flex flex-col gap-y-4" aria-labelledby="titre-mes-derniers-projets" role="region">
+  <div class="relative" aria-labelledby="titre-mes-derniers-projets">
     <h2
-      id="latest-projects-title"
+      id="titre-mes-derniers-projets"
       class="font-custom text-foreground text-2xl font-bold"
-      title="Latest Projects"
-      aria-label="Latest Projects"
+      title="Mes derniers projets"
+      aria-label="Mes derniers projets"
     >
       Mes derniers projets
     </h2>
-    <p class="text-muted-foreground text-sm" aria-label="projects description">
+    <p class="text-muted-foreground text-sm" aria-label="Description des derniers projets">
       Voici quelques-uns de mes derniers projets. Vous pouvez en trouver plus sur la <Link href="/projects" class="underline">page des projets</Link>.
     </p>
   </div>
@@ -104,7 +107,7 @@ const currentUrl = Astro.url;
       ))
     }
   </ul>
-  <div class="flex justify-center" aria-label="see all projects">
+  <div class="flex justify-center" aria-label="voir tous les projets">
     <Link
       href="/projects"
       class={buttonVariants({ variant: 'ghost' }) + ' group'}
