--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -75,7 +75,7 @@ const currentUrl = Astro.url
       <Image
         src={aboutEntry.data.image}
         alt={aboutEntry.data.title || 'À propos'}
-        class="col-start-2 mb-8 h-[500px] w-full rounded-3xl object-cover"
+        class="col-start-2 mb-8 h-[500px] w-full rounded-3xl object-cover object-top"
         loading="lazy"
         fetchpriority="low"      
         width={1200}
