--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,8 +25,9 @@ const currentUrl = Astro.url;
     >
       <div class="relative overflow-hidden rounded-lg w-full px-0 sm:w-auto sm:overflow-hidden sm:rounded-lg sm:px-0">
         <img
-          src="/img/YG-1.jpg"
+          src="/img/YG-1.webp"
           alt="Photo Yoann Guion"
+          fetchpriority="high"
           class="rounded-xl w-full h-115 sm:w-48 sm:h-64 object-cover shadow-lg"
         />
       </div>
