--- a/src/pages/projects/[...id].astro
+++ b/src/pages/projects/[...id].astro
@@ -45,7 +45,7 @@ const currentUrl = Astro.url;
     set:html={JSON.stringify(structuredData)}
   />
   <section
-    class="grid grid-cols-[minmax(0px,1fr)_min(calc(var(--breakpoint-lg)-2rem),100%)_minmax(0px,1fr)] gap-y-6 max-w-[calc(100vw-2rem)] "
+    class="grid grid-cols-[minmax(0px,1fr)_min(calc(var(--breakpoint-lg)-2rem),100%)_minmax(0px,1fr)] xl:grid-cols-[200px_minmax(0,1fr)_280px] gap-y-6 max-w-[calc(100vw-2rem)] gap-x-8"
   >
     <div class="col-start-2">
       <Breadcrumbs
@@ -95,19 +95,23 @@ const currentUrl = Astro.url;
       height={800}
     />
 
-    {headings.length > 0 && <TableOfContents headings={headings} />}
+    {headings.length > 0 && (
+      <div class="col-start-2 xl:col-start-1">
+        <TableOfContents headings={headings} />
+      </div>
+    )}
 
     <article class="prose col-start-2 max-w-none" aria-label="Project">
       <Content />
     </article>
 
-    <aside
-    class="group col-start-2 rounded-xl border p-4 xl:sticky xl:top-26 xl:col-start-3 xl:mr-auto xl:ml-8 xl:h-[calc(100vh-5rem)] xl:max-w-fit xl:rounded-none xl:border-none xl:p-0"
-  >
-    <div class="flex flex-col gap-4 rounded-xl border bg-card p-4 shadow-md transition-all duration-300 group-hover:shadow-lg xl:group-hover:shadow-none">
-      <h2 class="text-lg font-semibold">Détails du projet</h2>
-      <div class="flex flex-col gap-2 text-sm text-muted-foreground">
-        <p>{project.data.description}</p>
+<aside
+class="group col-start-2 rounded-xl border p-4 xl:sticky xl:top-26 xl:col-start-3 xl:h-[calc(100vh-5rem)] xl:max-w-fit xl:rounded-none xl:border-none xl:p-0"
+>
+      <div class="flex flex-col gap-4 rounded-xl border bg-card p-4 shadow-md transition-all duration-300 group-hover:shadow-lg xl:group-hover:shadow-none">
+        <h2 class="text-lg font-semibold">Détails du projet</h2>
+        <div class="flex flex-col gap-2 text-sm text-muted-foreground">
+          <p>{project.data.description}</p>
       </div>
 
       <hr class="my-4 border-t" />
