feat: adjust navbar

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,7 @@ const {
 <html lang={SITE.locale}>
   <Head>
     <slot name="head" />
+    <meta charset="utf-8" />
     <script is:inline src="https://analytics.ahrefs.com/analytics.js" data-key="+FHMgRP7/Duxaq5D0gZtJw" async></script>
     
     <!-- Preload critical resources -->
