--- a/src/pages/projects/[...id].astro
+++ b/src/pages/projects/[...id].astro
@@ -45,7 +45,7 @@ const currentUrl = Astro.url;
     set:html={JSON.stringify(structuredData)}
   />
   <section
-    class="grid grid-cols-[minmax(0px,1fr)_min(calc(var(--breakpoint-lg)-2rem),100%)_minmax(0px,1fr)] xl:grid-cols-[200px_minmax(0,1fr)_280px] gap-y-6 max-w-[calc(100vw-2rem)] gap-x-8"
+    class="grid grid-cols-[minmax(0px,1fr)_min(calc(var(--breakpoint-lg)-2rem),100%)_minmax(0px,1fr)] xl:grid-cols-[200px_minmax(0,1fr)_280px] gap-y-6 max-w-[calc(100vw-2rem)] "
   >
     <div class="col-start-2">
       <Breadcrumbs
@@ -88,7 +88,7 @@ const currentUrl = Astro.url;
     <Image
       src={project.data.image}
       alt={project.data.name}
-      class="col-start-2 mb-8 h-[500px] w-full rounded-3xl object-cover"
+      class="col-start-2 mb-8 w-full h-auto rounded-3xl object-cover"
       loading="lazy"
       fetchpriority="low"      
       width={1200}
@@ -105,9 +105,9 @@ const currentUrl = Astro.url;
       <Content />
     </article>
 
-<aside
-class="group col-start-2 rounded-xl border p-4 xl:sticky xl:top-26 xl:col-start-3 xl:h-[calc(100vh-5rem)] xl:max-w-fit xl:rounded-none xl:border-none xl:p-0"
->
+    <aside
+    class="group col-start-2 rounded-xl border p-4 xl:sticky xl:top-26 xl:col-start-3 xl:h-[calc(100vh-5rem)] xl:max-w-fit xl:rounded-none xl:border-none xl:p-0"
+    >
       <div class="flex flex-col gap-4 rounded-xl border bg-card p-4 shadow-md transition-all duration-300 group-hover:shadow-lg xl:group-hover:shadow-none">
         <h2 class="text-lg font-semibold">Détails du projet</h2>
         <div class="flex flex-col gap-2 text-sm text-muted-foreground">
