--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -59,7 +59,7 @@
 
   --radius: 0.5rem;
 
-  --font-sans: "Lexend", sans-serif;
+  --font-sans: "Lexend", Arial, sans-serif;
   --font-mono:
     Geist Mono, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
     'Liberation Mono', 'Courier New', monospace;
